@@ -1,3 +1,9 @@
+Mon Feb 12 17:44:08 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tc-i386.c (i386_displacement): Fix handling of
+	BFD_RELOC_X86_64_GOTPCREL.
+	(i386_validate_fix): Likewise.
+
 2001-02-09  David Mosberger  <davidm@hpl.hp.com>
 
 	* config/tc-ia64.h (md_elf_section_type): New macro.
