@@ -1,3 +1,7 @@
+Mon Feb 12 17:44:39 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* elf64-x86-64.c (x86_64_elf_howto): Fix name of R_X86_64_GOTPCREL.
+
 2001-02-10  Nick Clifton  <nickc@redhat.com>
 
 	* elf32-v850.c (v850_elf_reloc): Do not convert reloc addend to PC
